Fix an overflow CSS issue on the bottom row of the grid.

--- a/apps/web/assets/css/tokens.scss
+++ b/apps/web/assets/css/tokens.scss
@@ -16,6 +16,10 @@
   }
 }
 
+.tile {
+  overflow: hidden;
+}
+
 #on-top {
   z-index: 1000;
 }
